# autobrake

./: Assert.h  AutoBrake.h  AutoBrake2.cpp  AutoBrake2.h  AutoBreak.cpp  AutoBreak.h  CMakeLists.txt  Events.cpp  Events.h  Harness.h  IServiceBus.h  MockServiceBus.h  README.md  TestAutoBrake.cpp  TestAutoBrake.h  TestAutoBrake2.cpp  TestAutoBrake2.h  main.cpp  requirements.md
